--- a/client/src/components/InventorySearchBar/InventorySearchBar.css
+++ b/client/src/components/InventorySearchBar/InventorySearchBar.css
@@ -1,8 +1,9 @@
 .searchBar {
   box-sizing: border-box;
   display: flex;
-  width: 700px;
-  border: 1px solid gray;
+  width: 100%;
+  border-top: 1px solid gray;
+  border-bottom: 1px solid gray;
   background-color: #ced4d9;
 }
 
