--- a/client/src/pages/inventory/inventory.css
+++ b/client/src/pages/inventory/inventory.css
@@ -1,32 +1,20 @@
 .inventoryContainer {
   display: flex;
   width: 100%;
+  height: 100vh;
   box-sizing: border-box;
-  position: relative;
 }
 
-.inventoryContainer .inventoryList {
-  display: flex;
-  width: 70%;
-}
-
-.inventoryContainer .rightPanel {
+.leftPanel {
   display: flex;
   flex-direction: column;
-  height: 100%;
-  position: absolute;
-  right: 0px;
+  width: calc(100% - 300px);
+}
+
+.rightPanel {
+  display: flex;
+  flex-direction: column;
   width: 300px;
-}
-
-.recentActivity {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 30px;
-  height: 100%;
-  border: 1px solid gray;
-  background-color: #ced4d9;
 }
 
 .productList {
@@ -34,9 +22,10 @@
   box-sizing: border-box;
   flex-direction: column;
   gap: 10px;
-  height: 742px;
-  border-bottom: 1px solid gray;
+  height: 100%;
+  overflow-y: auto;
 }
+
 .productList table {
   width: 100%;
   border-collapse: separate;
@@ -44,6 +33,7 @@
   border: none;
   border-radius: 10px;
 }
+
 .productList th {
   background-color: #2c7bc9;
   color: white;
@@ -54,6 +44,7 @@
   border: none;
   border-radius: 20px;
 }
+
 .productList td {
   text-align: center;
   border: none;
@@ -62,8 +53,20 @@
 .pagination {
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 10px;
   margin-top: 10px;
+}
+
+img .pages{
+  width: 80%;
+  color: white;
+}
+
+.pageInfo {
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
 }
 
 .pagination button {
@@ -73,4 +76,6 @@
   padding: 5px 10px;
   border-radius: 10px;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
 }
