--- a/client/src/pages/inventory/inventory.css
+++ b/client/src/pages/inventory/inventory.css
@@ -58,24 +58,59 @@
   margin-top: 10px;
 }
 
-img .pages{
-  width: 80%;
-  color: white;
+.pages{
+  width: 60%;
 }
 
 .pageInfo {
   display: flex;
   justify-content: center;
   font-weight: bold;
+  margin-bottom: -15px;
 }
 
 .pagination button {
   background-color: #2c7bc9;
   color: white;
   border: none;
-  padding: 5px 10px;
+  padding: 5px 5px;
   border-radius: 10px;
   cursor: pointer;
   display: flex;
   justify-content: center;
+}
+
+.recentActivity{
+  width: 300px;
+  height: auto;
+  background-color: #ced4d9;
+  border: 1px solid gray;
+  border-top: none !important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.recentActivity span{
+  margin-top: 10px;
+}
+
+.actionDate{
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: row;
+}
+
+.titles{
+  font-weight: bold;
+}
+
+.details{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.nameDetail{
+  margin: 0px 10px;
 }
