--- a/client/src/pages/register/register.css
+++ b/client/src/pages/register/register.css
@@ -1,34 +1,82 @@
-.register-container {
-    max-width: 400px;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+.loginDesing {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #264eca;
+}
+
+.registerContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 40%;
+    height: 70%;
+    background-color: #264eca;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.164);
+}
+
+.registerContainer h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: white;
+    font-weight: bold;
+}
+
+.registerContainer form {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.inputContainer{
+    margin-bottom: 15px;
+    width: 80%;
+}
+
+.inputContainer input{
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 16px;
+    margin: 5px;
+}
+
+.inputContainer input:focus {
+    border-color: #007BFF;
+    outline: none;
+}
+
+.error {
+    margin-top: 5px;
+    color: white;
+    font-size: 14px;
     text-align: center;
 }
 
-.register-container h2 {
-    margin-bottom: 20px;
+.buttonContainer{
+    width: 80%;
+    display: flex;
+    justify-content: center;
 }
 
-.register-container form input {
-    width: 100%;
+.register{
+    width: 50%;
     padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-.register-container form button {
-    width: 100%;
-    padding: 10px;
-    background-color: #4CAF50;
-    color: white;
+    background-color: #007BFF;
+    color: #fff;
     border: none;
-    border-radius: 5px;
+    border-radius: 4px;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 5px;
     cursor: pointer;
 }
 
-.register-container form button:hover {
-    background-color: #45a049;
+.register:hover {
+    background-color: #1c8aff;
 }
