--- a/client/src/pages/supliersForm/SuplierForm.css
+++ b/client/src/pages/supliersForm/SuplierForm.css
@@ -7,9 +7,44 @@
     border-radius: 3px;
     cursor: pointer;
     font-size: 16px;
+    margin-top: 10px;
   }
   
   .supplier-form button:hover {
     background-color: #626567;
   }
-  
+  .containerSuplier{
+    width: 40%;
+    margin-top: 30px !important;
+    margin-bottom: 30px !important;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ced4d9;
+    border-radius: 10px;
+    background-color: #f7f9fc;
+    
+  }
+
+  .errorMessage {
+    color: red;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 10px;
+}
+.int{
+  padding: 10px;
+  border: 1px solid #ced4d9;
+  border-radius: 5px;
+  font-size: 14px;
+  padding-right: 70px;
+}
+.supplier-form label{
+  font-size: 16px;
+  font-weight: bold;
+}
+.containerSuplier h1{
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  margin: 10px;
+}
