--- a/client/src/components/AddProduct/AddProduct.css
+++ b/client/src/components/AddProduct/AddProduct.css
@@ -1,5 +1,18 @@
+.addContainer{
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+}
+
+.addProductWrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+}
+
 .addProductContainer {
-    width: 40%;
+    width: 30%;
     margin-top: 30px !important;
     margin-bottom: 30px !important;
     margin: 0 auto;
@@ -19,13 +32,14 @@
 .addProductForm {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    align-items: center;
+    gap: 10px;
 }
 
 .formGroup {
+    width: 70%;
     display: flex;
     flex-direction: column;
-    gap: 5px;
 }
 
 .formGroup label {
@@ -34,14 +48,13 @@
 }
 
 .formGroup input {
-    padding: 10px;
+    padding: 5px;
     border: 1px solid #ced4d9;
     border-radius: 5px;
     font-size: 16px;
 }
 
 .formGroup button {
-    width: 20%;
     padding: 10px;
     border: none;
     border-radius: 5px;
@@ -65,4 +78,13 @@
     font-weight: bold;
     text-align: center;
     margin-top: 10px;
+}
+
+.rightPanel {
+    display: flex;
+    position: absolute;
+    right: 0px;
+    flex-direction: column;
+    height: 100%;
+    width: 300px;
 }
