--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -2,9 +2,9 @@
 
 .navContainer {
   display: flex;
-  width: 220px;
+  width: 12%;
   height: 100%;
-  padding: 32px 12px;
+  padding: 1% 1%;
   flex-wrap: wrap;
   flex-direction: column;
   box-sizing: border-box;
@@ -12,6 +12,7 @@
   background-color: #ced4da;
   border: 1px solid gray;
 }
+
 .ulContainer {
   display: flex;
   flex-direction: column;
@@ -19,10 +20,12 @@
   box-sizing: border-box;
   padding: 0px;
 }
+
 .ulContainer a {
   text-decoration: none;
   color: black;
 }
+
 .ulContainer li {
   display: flex;
   align-items: center;
@@ -35,6 +38,7 @@
   border-radius: 10px;
   border: 0px;
 }
+
 .ulContainer li:hover {
   background-color: #2c7bc9;
 }
@@ -46,15 +50,18 @@
 .ulContainer li:hover a {
   color: white;
 }
+
 .ulContainer li a {
   width: 100%;
 }
+
 .ulContainer span {
   width: 100%;
   font-family: "Open Sans", sans-serif;
   color: #413e3e;
   font-size: 12px;
 }
+
 img {
   width: 25px;
   height: 25px;
