--- a/client/src/pages/salesorder/salesorder.css
+++ b/client/src/pages/salesorder/salesorder.css
@@ -1,22 +1,28 @@
+.mainContainer {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
 .salesOrderContainer {
-  width: 50%;
-  margin-top: 30px !important;
-  margin-bottom: 30px !important;
-  margin: 0 auto;
-  padding: 20px;
+  align-items: center;
   background-color: #f7f9fc;
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  align-items: center;
+  margin-bottom: 30px !important;
+  margin-top: 30px !important;
+  margin: 0 auto;
+  padding: 20px;
+  width: 60%;
 }
 
 .table {
   width: 100%;
   border-collapse: collapse;
   margin-bottom: 30px;
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   background-color: #f7f9fc;
   border: 1px solid #ced4d9;
@@ -90,7 +96,7 @@
 }
 
 .salesOrder {
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 24px;
   font-weight: bold;
   color: #343a40;
@@ -114,4 +120,11 @@ input[type="checkbox"] {
 
 input[type="number"]:disabled {
   background-color: #e9ecef;
+}
+
+.rightPanel {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  right: 0px;
 }
