--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -1,6 +1,35 @@
+.welcomeDesign {
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    background-color: #264eca;
+}
+
+.ImagenBackground {
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+.logo {
+    width: 600px;
+    height: 250px;
+}
+
 .homeContainer {
-    text-align: center;
-    margin-top: 50px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.homeContainer h1{
+    font-size: 80px;
+    font-weight: 700;
+    color: #fff;
+    margin-bottom: 20px;
 }
 
 .homeButtons {
@@ -8,8 +37,13 @@
 }
 
 .homeButtons button {
+    background-color: #fff;
+    color: #264eca;
+    font-weight: bold;
     margin: 10px;
     padding: 10px 20px;
     font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
     cursor: pointer;
 }
