--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -11,15 +11,19 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 300px;
+  width: 600px;
   height: 500px;
   background-color: #264eca;
 }
 
+.loginContainer h1{
+  color: white;
+  display: flex;
+  justify-content: center;
+}
+
 .loginContainer img {
-  width: 100px;
-  height: 100px;
-  margin: 10px;
+  width: 100%;
 }
 
 .loginContainer input {
@@ -30,6 +34,8 @@
   box-sizing: border-box;
   border: 1px solid #ccc;
   border-radius: 5px;
+  display: flex;
+  justify-content: center;
 }
 
 .loginContainer button {
@@ -42,12 +48,14 @@
   background-color: white;
   color: #264eca;
   font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.img {
-  width: 100px;
-  height: 100px;
-  margin: 10px;
+.logo {
+  width: 100%;
+  height: 50%;
 }
 
 .ImagenBackground {
