--- a/client/src/pages/register/register.css
+++ b/client/src/pages/register/register.css
@@ -1,4 +1,4 @@
-.loginDesing {
+.registerDesing {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,14 +15,11 @@
     height: 70%;
     background-color: #264eca;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.164);
 }
 
-.registerContainer h2 {
-    text-align: center;
-    margin-bottom: 20px;
-    color: white;
-    font-weight: bold;
+.logo {
+    width: 600px;
+    height: 250px;
 }
 
 .registerContainer form {
@@ -40,7 +37,7 @@
 .inputContainer input{
     width: 100%;
     padding: 10px;
-    border: 1px solid #ddd;
+    border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
     margin: 5px;
@@ -67,9 +64,9 @@
 .register{
     width: 50%;
     padding: 10px;
-    background-color: #007BFF;
-    color: #fff;
-    border: none;
+    background-color: #fff;
+    color: #264eca;
+    border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
     font-weight: bold;
