--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -3,13 +3,27 @@
   background-color: white;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
   display: flex;
-  height: 60px;
+  height: 80px;
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
   padding: 0px 20px;
   width: 100%;
   border: 1px solid #ced4d9;
+}
+
+.headerContainer .headerTitle {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 80px;
+  width: 180px;
+}
+.headerTitle img {
+  display: flex;
+  filter: invert(1);
+  height: 80px;
+  width: 180px;
 }
 
 .headerContainer h1 {
