--- a/client/src/pages/dashboard/dashboard.css
+++ b/client/src/pages/dashboard/dashboard.css
@@ -1,24 +1,37 @@
 .dashboardContainer {
   display: flex;
-  flex-direction: column;
   height: 100vh;
   width: 100%;
 }
 
 .dashboardContainer .leftPanel {
   display: flex;
-  flex-direction: column;
   height: 100%;
-  width: 300px;
+  width: 60%;
+  align-items: center;
+  margin-left: 120px;
+  flex-wrap: wrap;
+  border: 2px solid black;
 }
 
 .dashboardContainer .leftPanel .salesSumary {
   display: flex;
-  flex-direction: row;
-  height: 50px;
-  width: 720px;
-  justify-content: space-between;
-  border: 1px solid #e0e0e0;
+  height: 120px;
+  width: 800px;
+  gap: 40px;
+  border: 1px solid red;
+}
+
+.dashboardContainer .leftPanel .salesSumary span {
+  display: flex;
+  width: 200px;
+  height: 100px;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: 700;
+  background-color: white;
+  border-radius: 30px;
 }
 
 .dashboardContainer .rightPanel {
@@ -27,11 +40,12 @@
   right: 0px;
   flex-direction: column;
   height: 100%;
-  width: 300px;
+    width: 300px;
 }
 
 #salesChart {
+  display: flex;
   height: 300px;
-  width: 100%;
+  width: 800px;
   border: 1px solid #e0e0e0;
 }
