--- a/client/src/pages/dashboard/dashboard.css
+++ b/client/src/pages/dashboard/dashboard.css
@@ -6,30 +6,32 @@
 
 .dashboardContainer .leftPanel {
   display: flex;
+  box-sizing: border-box;
   height: 100%;
-  width: 60%;
+  width: 30%;
+  margin-left: 150px;
+  flex-direction: column;
   align-items: center;
-  margin-left: 120px;
-  flex-wrap: wrap;
 }
-
 .dashboardContainer .leftPanel .salesSumary {
   display: flex;
   height: 120px;
-  width: 800px;
-  gap: 40px;
+  width: 700px;
+  gap: 20px;
+  margin-left: 150px;
 }
 
 .dashboardContainer .leftPanel .salesSumary span {
   display: flex;
   width: 200px;
-  height: 100px;
+  height: 50px;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: 20px;
-  font-weight: 700;
+  font-size: 15px;
   background-color: white;
   border-radius: 30px;
+  border: 3px solid #e0e0e0;
 }
 
 .dashboardContainer .rightPanel {
