--- a/client/src/components/SupliersEdit/SupliersEdit.css
+++ b/client/src/components/SupliersEdit/SupliersEdit.css
@@ -1,20 +1,18 @@
 .success-message {
     background-color: #48FA30;
-    width: 0;
+    width: 38%;
     text-align: center;
     color: aliceblue;
     padding: 5px;
     opacity: 0;
-    animation: showMessage 1s forwards;
+    animation: fadeIn 1s forwards;
+    margin: -20px;
+    
 }
 
-@keyframes showMessage {
-    0% {
-        width: 0;
-        opacity: 0;
-    }
-    100% {
-        width: 40%;
+@keyframes fadeIn {
+    to {
         opacity: 1;
     }
 }
+
