Eliminación de Help & Settings. Mejoras en el css de las páginas: inventory, suplierForm y addProduct.

--- a/client/src/components/AddProduct/AddProduct.css
+++ b/client/src/components/AddProduct/AddProduct.css
@@ -1,3 +1,18 @@
+.back :link{
+  display: flex;
+  flex-direction: row;
+  font-size: 10px !important;
+  font-weight: bold !important;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.back a{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
 .addContainer {
   display: flex;
   width: 100%;
