--- a/client/src/pages/inventory/inventory.css
+++ b/client/src/pages/inventory/inventory.css
@@ -50,6 +50,20 @@
   border: none;
 }
 
+.productList button {
+  margin: 5px 5px;
+  background-color: #2c7bc9;
+  padding: 3px;
+  border-radius: 5px;
+  color: white;
+}
+
+.productList .buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .pagination {
   display: flex;
   justify-content: center;
