--- a/client/src/components/SuplierForm/SuplierForm.css
+++ b/client/src/components/SuplierForm/SuplierForm.css
@@ -12,9 +12,11 @@
 .supplier-form button:hover {
   background-color: #41BDEE;
 }
+
 button:active {
   transform: scale(0.95);
 }
+
 .supplier-form{
 font-size: 15px;
 font-weight: bold;
@@ -27,8 +29,6 @@ margin-top: 30px !important;
 margin-bottom: 30px !important;
 margin: 0 auto;
 padding: 20px;
-border: 1px solid #ced4d9;
-border-radius: 10px;
 background-color: #f7f9fc;
 box-shadow: 0 14px 28px rgba(26, 76, 240, 0.25),
 0 10px 10px rgba(5, 92, 99, 0.22);
@@ -38,9 +38,12 @@ box-shadow: 0 14px 28px rgba(26, 76, 240, 0.25),
 padding: 10px 15px;
 padding-right: 70px;
 margin: 5px;
-
 }
 
+.inputForm{
+  border: 1px solid #ced4d9;
+  border-radius: 5px;
+}
 
 .titulo{
 text-align: center;
@@ -48,8 +51,6 @@ font-size: 18px;
 font-weight: bold;
 margin-bottom: 20px;  
 }
-
-
 
 .supplier-form button:hover {
   background-color: #0199B4;
@@ -65,9 +66,11 @@ cursor: pointer;
 font-size: 16px;
 
 }
+
 #btnCancelar:hover{
 background-color: #CA2222;
 }
+
 .cont{
 display: flex;
 justify-content: space-between ;
