--- a/client/src/pages/dashboard/dashboard.css
+++ b/client/src/pages/dashboard/dashboard.css
@@ -13,6 +13,7 @@
   flex-direction: column;
   align-items: center;
 }
+
 .dashboardContainer .leftPanel .salesSumary {
   display: flex;
   height: 120px;
@@ -34,10 +35,11 @@
   border: 3px solid #e0e0e0;
 }
 
-.dashboardContainer .leftPanel .lastetProductsDashboard {
+.dashboardContainer .leftPanel .lastestProductsDashboard {
   display: flex;
   box-sizing: border-box;
-  margin-left: 250px;
+  margin-top: 30px;
+  margin-left: 200px;
   flex-direction: column;
   gap: 10px;
   height: 300px;
@@ -45,10 +47,14 @@
 }
 
 .dashboardContainer .leftPanel .lastestProducts table {
-  width: 500px;
-  border-collapse: separate;
-  border-spacing: 0 10px;
-  border: none;
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 20px;
+}
+
+.dashboardContainer .leftPanel .lastestProducts th, .dashboardContainer .leftPanel .lastestProducts td {
+  padding: 10px;
+  text-align: center;
 }
 
 .dashboardContainer .leftPanel .lastestProducts th {
@@ -58,13 +64,6 @@
 
 .dashboardContainer .leftPanel .lastestProducts tr {
   background-color: #ced4da;
-  border: none;
-  border-radius: 20px;
-}
-
-.dashboardContainer .leftPanel .lastestProducts td {
-  text-align: center;
-  border: none;
 }
 
 .dashboardContainer .rightPanel {
