--- a/client/src/components/SuplierForm/SuplierForm.css
+++ b/client/src/components/SuplierForm/SuplierForm.css
@@ -5,7 +5,7 @@
 }
 
 .suplierCont {
-  width: 40%;
+  width: 42%;
   margin: 30px auto;
   padding: 20px;
   border: 1px solid #ced4d9;
@@ -14,13 +14,17 @@
   box-shadow: 0 14px 28px rgba(26, 76, 240, 0.25), 0 10px 10px rgba(5, 92, 99, 0.22);
 }
 
-.supplier-form input {
-  width: calc(100% - 70px);
+.supplier-form input{
+  width: 100%;
   padding: 10px 15px;
   margin: 5px 0;
   border: 1px solid #ced4d9;
   border-radius: 5px;
   box-sizing: border-box;
+}
+
+.supplier-form button {
+  padding: 10px 35px;
 }
 
 .titulo {
@@ -30,9 +34,9 @@
   margin-bottom: 20px;
 }
 
-.supplier-form button,
-#btnCancelar {
-  padding: 10px 20px;
+.supplier-form button {
+  background-color: #19B0CB;
+  color: white;
   border: none;
   border-radius: 3px;
   cursor: pointer;
@@ -41,17 +45,11 @@
   margin: 10px 5px;
 }
 
-.supplier-form button {
-  background-color: #19B0CB;
-  color: white;
-}
-
 .supplier-form button:hover {
   background-color: #0199B4;
 }
 
-.supplier-form button:active,
-#btnCancelar:active {
+.supplier-form button:active {
   transform: scale(0.95);
 }
 
@@ -62,6 +60,10 @@
 
 #btnCancelar:hover {
   background-color: #CA2222;
+}
+
+#btnCancelar:active {
+  transform: scale(0.95);
 }
 
 .cont {
