--- a/client/src/components/SupliersSearchBar/SupliersSearchBar.css
+++ b/client/src/components/SupliersSearchBar/SupliersSearchBar.css
@@ -20,3 +20,10 @@
     font-weight: bold;
     text-align: center;
   }
+
+  .message-text {
+    position: absolute;
+    font-size: 14px;
+    color: red;
+  }
+  
