--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -19,6 +19,7 @@
   height: 80px;
   width: 180px;
 }
+
 .headerTitle img {
   display: flex;
   filter: invert(1);
@@ -38,4 +39,42 @@
   font-weight: 400;
   margin: 0;
   padding: 0;
+}
+
+/*Estilos en el cambio de monedas*/
+.headerExchange {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+  margin-top: 20px;
+}
+
+.purchase, .sale {
+  transition: opacity 0.5s ease-in-out;
+  background-color: #ced4d9;
+}
+
+
+.purchase p, .sale p {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  
+}
+
+.usFlag, .euFlag, .arFlag {
+  height: 16px;
+  margin: 0 5px;
+}
+.titleChangesMonetary{
+  display: flex;
+  background-color: #CED4D9;
+}
+
+/*Estilo modal*/
+.buttons-modal{
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
