--- a/client/src/components/QuickActions/QuickActions.css
+++ b/client/src/components/QuickActions/QuickActions.css
@@ -3,8 +3,8 @@
   border: 1px solid gray;
   border-top: none !important;
   justify-content: center;
-  width: 300px;
-  height: 261px;
+  width: 300px !important;
+  height: 120px;
   background-color: #ced4d9;
 }
 
