--- a/client/src/pages/supliers/supliers.css
+++ b/client/src/pages/supliers/supliers.css
@@ -1,9 +1,19 @@
 .mainSupplierContainer {
   width: 100%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  background-color: red;
   display: flex;
+  box-sizing: border-box;
+}
+.mainSupplierContainer .LeftPanel {
+  width: 80%;
+  display: flex;
+  box-sizing: border-box;
+}
+
+.mainSupplierContainer .RightPanel {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  right: 0;
 }
 
 .supliersContainer {
@@ -27,7 +37,6 @@
 
 .supliersContainer th,
 .supliersContainer td {
-  padding: 10px;
   text-align: left;
   border: 1px solid #ddd;
 }
@@ -68,7 +77,7 @@
   margin-top: 10px;
 }
 
-.Titulo{
+.Titulo {
   font-size: 2em;
   font-weight: bold;
   color: #333;
@@ -89,14 +98,14 @@
 }
 
 .table-buttons .edit-button {
-  background-color: #4CAF50; 
+  background-color: #4caf50;
   border: none;
   border-radius: 3px;
   color: white;
 }
 
 .table-buttons .delete-button {
-  background-color: #f44336; 
+  background-color: #f44336;
   color: white;
   border: none;
   border-radius: 3px;
