--- a/client/src/pages/dashboard/dashboard.css
+++ b/client/src/pages/dashboard/dashboard.css
@@ -20,6 +20,7 @@
   width: 700px;
   gap: 20px;
   margin-left: 150px;
+  margin-top: 10px;
 }
 
 .dashboardContainer .leftPanel .salesSumary span {
