--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -145,6 +145,37 @@
 
 /* Cambio de estilo del overlay cuando el mouse está sobre el modal */
 .overlay:hover {
-  background-color: rgba(0, 0, 0, 0.7); /* Fondo más oscuro */
+  background-color: rgba(0, 0, 0, 0.947);/* Fondo más oscuro */
+}
+
+
+/* Header.css */
+
+/* Clase para difuminar el fondo */
+.modal-open .headerContainer {
+  filter: blur(5px); /* Ajusta el valor del blur según sea necesario */
+}
+
+/* Estilos del modal */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.947); /* Fondo oscuro para el overlay */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* Asegura que el overlay esté por encima de otros elementos */
+}
+
+.modal {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  max-width: 500px;
+  width: 100%;
+  z-index: 1001; /* Asegura que el modal esté por encima del overlay */
 }
 
