--- a/client/src/pages/dashboard/dashboard.css
+++ b/client/src/pages/dashboard/dashboard.css
@@ -8,7 +8,7 @@
   display: flex;
   box-sizing: border-box;
   height: 100%;
-  width: 30%;
+  width: 70%;
   margin-left: 150px;
   flex-direction: column;
   align-items: center;
@@ -19,7 +19,6 @@
   height: 120px;
   width: 700px;
   gap: 20px;
-  margin-left: 150px;
   margin-top: 10px;
 }
 
@@ -40,7 +39,6 @@
   display: flex;
   box-sizing: border-box;
   margin-top: 30px;
-  margin-left: 200px;
   flex-direction: column;
   gap: 10px;
   height: 300px;
@@ -53,7 +51,8 @@
   margin-bottom: 20px;
 }
 
-.dashboardContainer .leftPanel .lastestProducts th, .dashboardContainer .leftPanel .lastestProducts td {
+.dashboardContainer .leftPanel .lastestProducts th,
+.dashboardContainer .leftPanel .lastestProducts td {
   padding: 10px;
   text-align: center;
 }
